# landy

./: .gitignore  README.md  pyproject.toml  remake_chroma_db.ipynb  requirements.txt  setup.py  untitled.txt
.github/workflows/: main.yml
data/: dated_blogs.json  gpt4_qna_pairs.csv  qna_pairs.csv
data/interim/: blogs.json
db/: chroma-collections.parquet
db/index/: id_to_uuid_76ddf453-e8ad-4adc-9ba3-61a764d4ccec.pkl  id_to_uuid_d82016e7-ff6d-4f99-bffa-3979642fc863.pkl  index_metadata_76ddf453-e8ad-4adc-9ba3-61a764d4ccec.pkl  index_metadata_d82016e7-ff6d-4f99-bffa-3979642fc863.pkl  uuid_to_id_76ddf453-e8ad-4adc-9ba3-61a764d4ccec.pkl  uuid_to_id_d82016e7-ff6d-4f99-bffa-3979642fc863.pkl
landy/: bot.py
landy/utils/: lc_handler.py  qna_database.py  text_preprocessor.py
seria/: bot.py
seria/utils/: lc_handler.py  qna_database.py
src/: app.py  main.py
src/_archive/: qna_pair_gen.py
src/_archive/gpt3/: gpt3.py
src/_archive/model_fine_tuner/: model_fine_tuner.py
src/gpt3/: gpt3.py  lc_handler.py
src/model_fine_tuner/: model_fine_tuner.py
src/scraper/: combine_jsons.ipynb  manual_data_transforms.ipynb  results.json
src/scraper/scraper/: settings.py
src/scraper/scraper/spiders/: speeder.py
src/seria/: bot.py
src/seria/tests/: test_bot.py  test_lc_handler.py  test_qnadatabase.py
src/seria/utils/: config.yml  lc_handler.py  logger.py  qnadatabase.py  sitemap_spider.py  text_preprocessor.py
src/text_preprocessor/: text_preprocessor.py
src/utils/: lc_handler.py  text_preprocessor.py
tests/: test_bot.py  test_lc_handler.py  test_qnadatabase.py
