[tool.poetry]
name = "Landy"
version = "0.1"
description = "A Discord bot for Dungeon Fighter Online Global questions"
authors = ["Jordie Belle <jordie.belle@proton.me>"]
readme = "README.md"
homepage = "https://github.com/JordieB/landy"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
python = "^3.9"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "*"
wheel = "*"
pytest = "*"
pytest-asyncio = "*"
tiktoken = "*"
openai = "*"
chromadb = "*"
langchain = "*"
beautifulsoup4 = "*"
nltk = "*"
discord-py = "*"
py-cord = "*"
dpytest = "*"
asyncpg = "*"
scrapy = "*"
scrapy-fake-useragent = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
