[tool.poetry]
name = "Landy"
version = "0.1"
description = "A Discord bot for Dungeon Fighter Online Global questions"
authors = ["Jordie Belle <jordie.belle@proton.me>"]
readme = "README.md"
homepage = "https://github.com/JordieB/landy"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
python = "^3.9"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "*"
wheel = "*"
pytest = "7.3.1"
pytest-asyncio = "0.21.0"
tiktoken = "0.4.0"
openai = "0.27.6"
chromadb = "0.3.23"
langchain = "0.0.172"
beautifulsoup4 = "4.12.2"
nltk = "3.8.1"
asyncpg = "0.27.0"
scrapy = "2.9.0"
scrapy-fake-useragent = "1.4.4"
python-dotenv = "1.0.0"
py-cord = "2.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
